--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "DataSource=app.db",
+    "DOGConnection": "Data Source=3.80.81.224:1521/SPRING2023PDB;User ID=DOG;Password=DOGPW;Connection Timeout=60;Connection Lifetime=10;Max Pool Size=2;Min Pool Size=0;Pooling=false;"
+
   },
   "Logging": {
     "LogLevel": {
